// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusMessages takes a snapshot of error state 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <div
      class="p-4 bg-red-100 text-red-700 rounded-md"
    >
      Cache rebuild failed due to insufficient permissions
    </div>
  </div>
</div>
`;

exports[`StatusMessages takes a snapshot of success state 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <div
      class="p-4 bg-blue-100 text-blue-700 rounded-md flex justify-between items-center"
    >
      <span>
        Cache rebuild completed in 2 minutes 30 seconds
      </span>
    </div>
  </div>
</div>
`;
